--- a/.github/workflows/cses.yml
+++ b/.github/workflows/cses.yml
@@ -2,7 +2,8 @@ name: auto deploy cses standings
 
 on:
   schedule:
-    - cron: '10 * * * *'
+    - cron: '*/5 * * * *'
+  workflow_dispatch:
 
 jobs:
   deploy:
