--- a/.github/workflows/cses.yml
+++ b/.github/workflows/cses.yml
@@ -21,14 +21,15 @@ jobs:
 
       - run: |
           python -m pip install --upgrade pip 
-          pip install -r ./cses-standings/requirements.txt
-          
-      - run: python ./cses-standings/main.py -u cses-users.txt -o ./public/standings.html
+          pip install -r cses-standings/requirements.txt
+          mkdir cses
+          cp -r cses-standings/static cses/static
+          python cses-standings/main.py -u cses-users.txt -o cses/index.html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_dir: cses
           destination_dir: cses
 
