Changed name of the second section

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -11,10 +11,10 @@
   url = "/docs/intro/"
 
 [[docs]]
-  name = "Tema2"
+  name = "La STL"
   weight = 3
-  identifier = "tema2"
-  url = "/docs/tema2/"
+  identifier = "stl"
+  url = "/docs/stl/"
 
 [[docs]]
   name = "Anexos"
