--- a/config.toml
+++ b/config.toml
@@ -3,8 +3,8 @@
   ## CSES Standings config
   ### IMPORTANT: The external API uses this file, and the `csesIds` config to fetch the user ids
 
-  csesIds   = [69586, 74066, 74546, 72385, 83700, 74173, 74511, 83810, 83823, 83698]
-  csesNames = ["Blaz", "wawer",  "Marinkovic", "Dmitri", "Jayki", "Davicom", "Lamp", "MrYhatoh", "Joa", "Lulu"]
+  csesIds   = [69586, 74066, 74546, 72385, 83700, 74173, 74511, 83810, 83823, 83698, 83825]
+  csesNames = ["Blaz", "wawer",  "Marinkovic", "Dmitri", "Jayki", "Davicom", "Lamp", "MrYhatoh", "Joa", "Lulu", "Jose"]
   csesEndpoint = "https://uch.ibanezd.ml/api/cses-tasks/"
   csesProblemUrl = "https://cses.fi/problemset/task/"
   csesCacheLife = 300 # in seconds
