--- a/config.toml
+++ b/config.toml
@@ -3,8 +3,8 @@
   ## CSES Standings config
   ### IMPORTANT: The external API uses this file, and the `csesIds` config to fetch the user ids
 
-  csesIds   = [69586, 74066, 74546, 72385, 83700, 74173, 85342, 83810, 83823, 83698, 83825, 83827, 85726, 92639]
-  csesNames = ["Blaz", "wawer",  "Marinkovic", "Dmitri", "Jayki", "Davicom", "Lamp", "MrYhatoh", "Joa", "Lulu", "Jose", "Ale", "josesese", "M4thinking"]
+  csesIds   = [69586, 74066, 74546, 72385, 83700, 74173, 85342, 83810, 83823, 92639, 58188, 107392]
+  csesNames = ["Blaz", "wawer",  "Marinkovic", "Dmitri", "Jayki", "Davicom", "Lamp", "MrYhatoh", "Joa", "M4thinking", "dariasc", "AngrySeal"]
   csesEndpoint = "https://uch.ibanezd.ml/api/cses-tasks/"
   csesProblemUrl = "https://cses.fi/problemset/task/"
   csesCacheLife = 300 # in seconds
