--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,6 @@
 
   csesIds   = [69586, 74066, 74546, 72385, 83700, 74173, 85342, 83810, 92639, 58188, 107392, 49524, 109224]
   csesNames = ["Blaz", "wawer",  "Marinkovic", "Dmitri", "Jayki", "Davicom", "Lamp", "MrYhatoh", "M4thinking", "dariasc", "AngrySeal", "5038", "frann"]
-  csesEndpoint = "https://uch.ibanezd.ml/api/cses-tasks/"
+  csesEndpoint = "https://uchile.davicom.cl/api/cses-tasks/"
   csesProblemUrl = "https://cses.fi/problemset/task/"
   csesCacheLife = 300 # in seconds
