--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "stylelint-config-standard": "^20.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4"
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.16.1"
   }
 }
