Terminado treaps.md

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "stylelint-config-standard": "^20.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4"
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "binary-tree-visualizer": "^2.1.5"
   }
 }
