--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "stylelint-config-standard": "^20.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "binary-tree-visualizer": "^2.1.5"
+    "@fortawesome/fontawesome-free": "^5.15.4"
   }
 }
