Enable katex and highlighting in code fences

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -75,7 +75,7 @@ lastMod = false
   bootStrapJs = true
   breadCrumb = false
   highLight = true
-  kaTex = false
+  kaTex = true
   multilingualMode = false
   docsVersioning = false
   fullWidth = false
