--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,12 @@
   csesIds   = [69586, 74066, 74546, 72385, 83700, 74173, 58188, 107392, 49524, 87807, 114566, 114575, 114576, 136720, 136680, 139415, 144144, 141759, 86689, 135356]
   csesNames = ["Blaz", "wawer", "Marinkovic", "Dmitri", "Jayki", "Davicom", "dariasc", "AngrySeal", "vi", "J", "MichaelS", "m1tu", "Brito", "paul0li", "SeerLite", "Tega", "Condorchavo", "fer", "Eric K.", "Ppp"]
 
+  trainingNames = [
+      "Busqueda Binaria / Dos Punteros",
+      "Grafos: BFS / DFS / Dijkstra / DSU",
+      "Programación Dinámica"
+  ]
+
   [[Params.uchilePeople]]
   name = "Javier Oliva"
   nickname = "JOliva"
