--- a/config.toml
+++ b/config.toml
@@ -8,9 +8,10 @@
   csesNames = ["Blaz", "wawer", "Marinkovic", "Dmitri", "Jayki", "Davicom", "dariasc", "AngrySeal", "vi", "J", "MichaelS", "m1tu", "Brito", "paul0li", "SeerLite", "Tega", "Condorchavo", "fer", "Eric K.", "Ppp"]
 
   trainingNames = [
-      "Busqueda Binaria / Dos Punteros",
+      "Búsqueda Binaria / Dos Punteros",
       "Grafos: BFS / DFS / Dijkstra / DSU",
-      "Programación Dinámica"
+      "Programación Dinámica",
+      "Estructuras de Datos"
   ]
 
   [[Params.uchilePeople]]
