--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@
       "Búsqueda Binaria / Dos Punteros",
       "Grafos: BFS / DFS / Dijkstra / DSU",
       "Programación Dinámica",
-      "Estructuras de Datos"
+      "Estructuras De Datos"
   ]
 
   [[Params.uchilePeople]]
