--- a/config.toml
+++ b/config.toml
@@ -327,7 +327,7 @@
   meta_hackercup = true
   ieeextreme = true
   rayan = true
-  codeforcesId = "daridius"
+  codeforcesId = "Pansho721"
   codeforcesRating = 912
   csesId = "none"
   atcoderId = "none"
